--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,60 @@ body #root .Main {
   position: relative;
   background: var(--pri);
 }
+html #root .Main .navigation,
+body #root .Main .navigation {
+  height: 0vh;
+  width: 100vw;
+  z-index: -2;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+  background: var(--pri2);
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+html #root .Main .navigation .close,
+body #root .Main .navigation .close {
+  padding: 0.5rem 1rem;
+  background: var(--pri);
+  width: -moz-fit-content;
+  width: fit-content;
+  border-radius: 0.2rem;
+  align-self: flex-end;
+  margin-right: 5rem;
+  cursor: pointer;
+  opacity: 0;
+}
+html #root .Main .navigation ul,
+body #root .Main .navigation ul {
+  list-style-type: none;
+}
+html #root .Main .navigation ul li,
+body #root .Main .navigation ul li {
+  opacity: 0;
+}
+html #root .Main .navigation ul li a,
+body #root .Main .navigation ul li a {
+  display: inline-block;
+  padding-left: 4rem;
+  font-size: clamp(3rem, 8vw, 8rem);
+  font-family: var(--bebo);
+  text-decoration: none;
+}
+html #root .Main .navigation .NavHandles,
+body #root .Main .navigation .NavHandles {
+  opacity: 0;
+  padding-left: 4rem;
+  font-size: clamp(1rem, 2vw, 6rem);
+  white-space: nowrap;
+}
+html #root .Main .navigation .NavHandles i,
+body #root .Main .navigation .NavHandles i {
+  font-size: clamp(0.5rem, 3vw, 3rem);
+  pointer-events: none;
+}
 html #root .Main nav,
 body #root .Main nav {
   background: var(--backdrop);
@@ -84,6 +138,8 @@ body #root .Main nav .milestone .m-Line {
 }
 html #root .Main nav .ham,
 body #root .Main nav .ham {
+  position: relative;
+  z-index: 20;
   display: flex;
   align-items: center;
   font-size: 2rem;
