--- a/src/style.scss
+++ b/src/style.scss
@@ -49,7 +49,56 @@ body {
             overflow: hidden;
             position: relative;
             background: var(--pri);
+            
+            .navigation{
+                height: 0vh;
+                width: 100vw;
+                z-index: -2;
+                position: fixed;
+                top:0 ;
+                z-index: 10;
+                background: var(--pri2);
+                display: none;
+                flex-direction: column;
+                justify-content: space-around;
+                align-items: flex-start;
+                
+                .close{
+                    padding:0.5rem 1rem;
+                    background: var(--pri);
+                    width: fit-content;
+                    border-radius: 0.2rem;
+                    align-self: flex-end;
+                    margin-right: 5rem;
+                    cursor: pointer;
+                    opacity: 0;
+                    
+                }
+                ul{
+                    list-style-type: none;
+                    li{
+                        opacity: 0;
+                        a{
+                            display: inline-block;
+                            padding-left: 4rem;
+                            font-size: clamp(3rem, 8vw, 8rem);
+                            font-family: var(--bebo);
+                            text-decoration: none;
+                        }
+                    }
+                }
 
+                .NavHandles{
+                    opacity: 0;
+                       padding-left: 4rem;
+                       font-size: clamp(1rem, 2vw, 6rem);
+                       white-space:nowrap;
+                       i{
+                        font-size: clamp(0.5rem, 3vw, 3rem);
+                        pointer-events: none;
+                       }
+                }
+            }
             nav {
                 background: var(--backdrop);
                 display: flex;
@@ -93,10 +142,12 @@ body {
                 }
 
                 .ham {
-
+                   position: relative;
+                   z-index: 20;
                     display: flex;
                     align-items: center;
                     font-size: 2rem;
+                    
                 }
             }
 
